doc: update new diary

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,3 +1,6 @@
 {
-  "livePreview": false
+  "livePreview": false,
+  "propertiesInDocument": "visible",
+  "vimMode": true,
+  "showLineNumber": true
 }
