--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -2,5 +2,6 @@
   "livePreview": false,
   "propertiesInDocument": "visible",
   "vimMode": true,
-  "showLineNumber": true
+  "showLineNumber": true,
+  "attachmentFolderPath": "images"
 }
