--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -4,5 +4,11 @@
   "vimMode": false,
   "showLineNumber": true,
   "attachmentFolderPath": "images",
-  "alwaysUpdateLinks": true
+  "alwaysUpdateLinks": true,
+  "pdfExportSettings": {
+    "pageSize": "A4",
+    "landscape": false,
+    "margin": "0",
+    "downscalePercent": 100
+  }
 }
